--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  pathunstrom
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-modernist
+theme: jekyll-theme-hacker
 gems:
   - jekyll-feed
 exclude:
